tests/src/frontend/syntax/invalid/unexpected_bar.sk

fun test(): void {
  1 | 2
}
